--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>QPermuta</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QTableWidget" name="myTable">
